Adding colab button

--- a/Gretel_Bartender.ipynb
+++ b/Gretel_Bartender.ipynb
@@ -2,6 +2,15 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "source": [
+        "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/gretelai/fun-with-synthetic-data/blob/main/Gretel_Bartender.ipynb)"
+      ],
+      "metadata": {
+        "id": "XvZWJPHw1Euh"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "UTRxpSlaczHY"
       },
